--- a/css/screen.css
+++ b/css/screen.css
@@ -4433,6 +4433,7 @@ span.placeholder {
   left: -35%;
   z-index: 1;
   width: 43%;
+  height: 49%;
 }
 .background.urine .sticker .bubbles .bubble {
   position: absolute;
@@ -4440,62 +4441,62 @@ span.placeholder {
 }
 .background.urine .sticker .bubbles .bubble:nth-child(1) {
   left: 0;
-  margin-top: 21.5%;
+  top: 21.5%;
   width: 28%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(2) {
   left: -13%;
-  margin-top: 11.5%;
+  top: 11.5%;
   width: 15.5%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(3) {
   left: 29%;
-  margin-top: 23.5%;
+  top: 23.5%;
   width: 14.5%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(4) {
   left: 101%;
-  margin-top: 24.5%;
+  top: 24.5%;
   width: 11.5%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(5) {
   left: 90.5%;
-  margin-top: 42%;
+  top: 42%;
   width: 11.2%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(6) {
   left: -12.5%;
-  margin-top: 45.5%;
+  top: 45.5%;
   width: 17.3%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(7) {
   left: 70.5%;
-  margin-top: 23%;
+  top: 23%;
   width: 25.4%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(8) {
   left: -31.5%;
-  margin-top: 30.5%;
+  top: 30.5%;
   width: 22%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(9) {
   left: 22.5%;
-  margin-top: 40%;
+  top: 40%;
   width: 28%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(10) {
   left: 47.5%;
-  margin-top: 31.5%;
+  top: 31.5%;
   width: 15%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(11) {
   left: 23.5%;
-  margin-top: 6%;
+  top: 6%;
   width: 17.3%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(12) {
   left: 53.5%;
-  margin-top: 11.5%;
+  top: 11.5%;
   width: 17.2%;
 }
 .background.urine .sticker .drop {
@@ -4582,51 +4583,39 @@ span.placeholder {
 }
 .background.urine .sticker.active .bubbles .bubble:nth-child(1) {
   left: 120.5%;
-  margin-top: 21.5%;
 }
 .background.urine .sticker.active .bubbles .bubble:nth-child(2) {
   left: 132%;
-  margin-top: 11.5%;
 }
 .background.urine .sticker.active .bubbles .bubble:nth-child(3) {
   left: 107.5%;
-  margin-top: 23.5%;
 }
 .background.urine .sticker.active .bubbles .bubble:nth-child(4) {
   left: 163%;
-  margin-top: 24.5%;
 }
 .background.urine .sticker.active .bubbles .bubble:nth-child(5) {
   left: 163%;
-  margin-top: 42%;
 }
 .background.urine .sticker.active .bubbles .bubble:nth-child(6) {
   left: 122.5%;
-  margin-top: 45.5%;
 }
 .background.urine .sticker.active .bubbles .bubble:nth-child(7) {
   left: 141%;
-  margin-top: 23%;
 }
 .background.urine .sticker.active .bubbles .bubble:nth-child(8) {
   left: 95%;
-  margin-top: 30.5%;
 }
 .background.urine .sticker.active .bubbles .bubble:nth-child(9) {
   left: 135%;
-  margin-top: 40%;
 }
 .background.urine .sticker.active .bubbles .bubble:nth-child(10) {
   left: 113%;
-  margin-top: 31.5%;
 }
 .background.urine .sticker.active .bubbles .bubble:nth-child(11) {
   left: 114%;
-  margin-top: 6%;
 }
 .background.urine .sticker.active .bubbles .bubble:nth-child(12) {
   left: 145.5%;
-  margin-top: 11.5%;
 }
 .background.urine .sticker.active .tank .water {
   top: 44.5%;
